--- a/templates/fanscard/premiun_card.html
+++ b/templates/fanscard/premiun_card.html
@@ -223,14 +223,14 @@
 
   <div class="card" id="fanCard">
     <div class="gloss"></div>
-    <img src="{% static 'image/keanue-one.jpg' %}" class="avatar" alt="Keanu Reeves">
+    <img src="{% static 'image/jason-profile.jpeg' %}" class="avatar" alt="Keanu Reeves">
 
     <div class="header">
-      <h1>KEANU REEVES</h1>
+      <h1>JASON MOMOA</h1>
       <span>FANS CARD</span>
     </div>
 
-    <div class="club-name">Member of the Keanu Legacy Club</div>
+    <div class="club-name">Member of the Jason Legacy Club</div>
 
     <div class="details">
       <div class="left">
@@ -243,7 +243,7 @@
         <p><strong>Issued On:</strong></p>
       </div>
       <div class="right">
-        <img src="{% static 'image/keanue-two.jpg' %}" alt="Fan Photo">
+        <img src="" alt="Fan Photo">
       </div>
     </div>
 
@@ -251,7 +251,7 @@
 
     <div class="footer">
       Verified by:
-      <div class="signature">Keanu Reeves</div>
+      <div class="signature">Jason Momoa</div>
     </div>
 
     <div class="quote">
