--- a/templates/logins/register.html
+++ b/templates/logins/register.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
-</head>
-<body>
+{% extends 'base2.html' %}
+
+{% block content %}
 <style>
   :root {
     --accent-color: #ff3c00;
@@ -175,5 +170,4 @@
   }
 </script>
 
-</body>
-</html>
+{% endblock %}
