--- a/templates/payment/payment.html
+++ b/templates/payment/payment.html
@@ -331,6 +331,15 @@
 
 <a href="{% url 'how_to_pay' %}" class="guide-btn">Complete Guide: How to Make Payment</a>
 
+<a href="{% url 'create_shipment' %}" class="guide-btn">Create A Shipping ID</a>
+
+<div class="instruction-box" style="margin-top: -1rem;">
+    <p>
+        After making payment and confirming it with the management, please click the <strong>“Create A Shipping ID”</strong> button above. 
+        Once created, make sure to <strong>save your Shipping ID</strong> — you’ll need it to track and monitor the delivery of your goods.
+    </p>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
 <script>
     function copyText(elementId, btn) {
