--- a/app4/templates/sell.html
+++ b/app4/templates/sell.html
@@ -61,12 +61,19 @@
 <div class="link-container">
   <h2>Market place</h2>
 
+  {% if user.is_authenticated %}
   <a href="{% url 'fanscard_list' %}" class="link-btn">🏠 Buy Standard Fan Cards</a>
   <a href="{% url 'my_fanscard' %}" class="link-btn">🏠 My Standard Fan Cards</a>
   <a href="{% url 'premiun_card' %}" class="link-btn">🏠 Buy Premium Fan Card</a>
   <a href="{% url 'my_cards' %}" class="link-btn">🏠 My Premium Fan Cards</a>
   <a href="{% url 'product_list' %}" class="link-btn">🏠 Buy Others Products</a>
-
+  {% else %}
+  <a href="{% url 'login' %}" class="link-btn">🏠 Buy Standard Fan Cards</a>
+  <a href="{% url 'login' %}" class="link-btn">🏠 My Standard Fan Cards</a>
+  <a href="{% url 'login' %}" class="link-btn">🏠 Buy Premium Fan Card</a>
+  <a href="{% url 'login' %}" class="link-btn">🏠 My Premium Fan Cards</a>
+  <a href="{% url 'login' %}" class="link-btn">🏠 Buy Others Products</a>
+  {% endif %}
 
 </div>
 {% endblock %}
