--- a/templates/my_fanscard.html
+++ b/templates/my_fanscard.html
@@ -165,7 +165,7 @@
 </style>
 
 <div class="fanrecord-container">
-  <h1 class="fanrecord-title">💎 My Exclusive Fan Cards</h1>
+  <h1 class="fanrecord-title">💎 My Jason Momoa Standard Fan Cards</h1>
 
   {% if cards %}
   <div class="fanrecord-grid">
