--- a/app3/templates/my_cards.html
+++ b/app3/templates/my_cards.html
@@ -227,7 +227,7 @@
   }
 </style>
 
-<h2>💎 My Keanu Reeves Fan Cards</h2>
+<h2>💎 My Jason Momoa Premium Fan Cards</h2>
 
 <div class="cards-container">
   {% for card in cards %}
