--- a/tracking/templates/tracking/tracking_result.html
+++ b/tracking/templates/tracking/tracking_result.html
@@ -95,7 +95,9 @@
       <p><strong>Email:</strong> {{ shipment.email }}</p>
       <p><strong>Service:</strong> {{ shipment.service }}</p>
       <p><strong>Commodity:</strong> {{ shipment.commodity }}</p>
-      <p><strong>Destination:</strong> {{ shipment.destination_country }}</p>
+      <p><strong>Destination Country:</strong> {{ shipment.destination_country }}</p>
+      <p><strong>Destination State:</strong> {{ shipment.destination_country_state }}</p>
+      <p><strong>Destination Town:</strong> {{ shipment.destination_country_town }}</p>
       <p><strong>Location Now:</strong> {{ shipment.current_location }}</p>
       <p><strong>Note:</strong> {{ shipment.note|default:"—" }}</p>
       <p><strong>Status:</strong> {{ shipment.status }}</p>
