--- a/tracking/templates/base2.html
+++ b/tracking/templates/base2.html
@@ -306,7 +306,7 @@
   <div class="footer-bottom">&copy; {{ year }} Jason Momoa. All rights reserved.</div>
 </footer>
 
-<audio id="notifySound" src="{% static 'sounds/ringtone.mp3' %}" preload="auto"></audio>
+<audio id="notifySound" src="{% static 'sounds/notification.wav' %}" preload="auto"></audio>
 
 <script>
   function toggleMenu() {
