--- a/tracking/templates/base2.html
+++ b/tracking/templates/base2.html
@@ -241,6 +241,7 @@
     <li><a href="{% url 'gallary' %}">Movies</a></li>
     <li><a href="{% url 'gallery' %}">Gallery</a></li>
     <li><a href="{% url 'sell' %}">Market Place</a></li>
+    <li><a href="{% url 'donate' %}">Make Donation</a></li>
     {% if user.is_authenticated %}
       <li><a href="{% url 'track_shipment' %}">Track Shipment</a></li>
       <li>
@@ -253,7 +254,7 @@
       <li><a href="{% url 'login' %}">Login</a></li>
       <li><a href="{% url 'register' %}">Register</a></li>
     {% endif %}
-    {% if user.is_staff %}
+    {% if user.is_superuser %}
       <li><p style="margin: 10px 0; color: #ff3c00;">Admins Only</p></li>
       <li>
         <a href="{% url 'admin_user_list' %}" class="chat-link">
@@ -296,6 +297,7 @@
     <h4>Quick Links</h4>
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'author' %}">Author</a>
+    <a href="{% url 'donate' %}">Donate</a>
     <a href="{% url 'fanscard_list' %}">Buy Your Fans Card</a>
   </div>
   <div class="footer-section">
