--- a/tracking/templates/donate.html
+++ b/tracking/templates/donate.html
@@ -145,7 +145,7 @@
 
   <div class="donation-card">
     <div class="donation-form">
-      <a href="{% url 'doante_payment' %}">
+      <a href="{% url 'donate_payment' %}">
         <button type="button">Go To Donate Page</button>
       </a>
     </div>
