--- a/tracking/templates/base2.html
+++ b/tracking/templates/base2.html
@@ -241,7 +241,7 @@
     <li><a href="{% url 'gallary' %}">Movies</a></li>
     <li><a href="{% url 'gallery' %}">Gallery</a></li>
     <li><a href="{% url 'sell' %}">Market Place</a></li>
-    <li><a href="{% url 'donate' %}">Make Donation</a></li>
+    <li><a href="{% url 'donation_text' %}">Donation</a></li>
     {% if user.is_authenticated %}
       <li><a href="{% url 'track_shipment' %}">Track Shipment</a></li>
       <li>
