--- a/templates/payment/payment.html
+++ b/templates/payment/payment.html
@@ -202,8 +202,8 @@
 </style>
 
 <!-- Lead Bank -->
-<div class="payment-container">
-    <h2>Lead Bank Payment</h2>
+<!-- <div class="payment-container"> -->
+    <!-- <h2>Lead Bank Payment</h2>
 
     <div class="payment-detail">
         <span class="detail-label">Account Name:</span>
@@ -221,25 +221,25 @@
         <span class="detail-label">Bank Name:</span>
         <span class="detail-value" id="bankName1">Lead Bank</span>
         <button class="copy-btn" onclick="copyText('bankName1', this)"><i class="fas fa-copy"></i></button>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="payment-detail">
         <span class="detail-label">Routing Number:</span>
         <span class="detail-value" id="routingNumber1">101019644</span>
         <button class="copy-btn" onclick="copyText('routingNumber1', this)"><i class="fas fa-copy"></i></button>
     </div>
-</div>
+</div> -->
 
 <!-- Wells Fargo -->
-<div class="payment-container">
+<!-- <div class="payment-container">
     <h2>Wells Fargo Payment</h2>
 
     <div class="payment-detail">
         <span class="detail-label">Account Name:</span>
         <span class="detail-value" id="accName2">Jacob Egop Lawrence</span>
         <button class="copy-btn" onclick="copyText('accName2', this)"><i class="fas fa-copy"></i></button>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="payment-detail">
         <span class="detail-label">Account Number:</span>
         <span class="detail-value" id="accNumber2">40630276004901000</span>
@@ -257,7 +257,7 @@
         <span class="detail-value" id="routingNumber2">121000248</span>
         <button class="copy-btn" onclick="copyText('routingNumber2', this)"><i class="fas fa-copy"></i></button>
     </div>
-</div>
+</div> -->
 
 <!-- USDT -->
 <div class="payment-container">
