--- a/tracking/templates/base2.html
+++ b/tracking/templates/base2.html
@@ -242,6 +242,7 @@
     <li><a href="{% url 'gallery' %}">Gallery</a></li>
     <li><a href="{% url 'sell' %}">Market Place</a></li>
     <li><a href="{% url 'donation_text' %}">Donation</a></li>
+    <li><a href="{% url 'fanspage' %}">Fans Page</a></li>
     {% if user.is_authenticated %}
       <li><a href="{% url 'track_shipment' %}">Track Shipment</a></li>
       <li>
